[package]
authors = ["Dave Rolsky <autarch@urth.org"]
name = "sqlx-experiments"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "~1"
tokio = { version = "~1", features = ["full"] }
uuid = { version = "~0.8" }

[dependencies.sqlx]
version = "~0.5"
features = [
    "macros",
    "runtime-tokio-native-tls",
    "postgres",
    "tls",
    "uuid",
]
